--- a/index.html
+++ b/index.html
@@ -1,61 +1,64 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  </head>
-  <body>
-    <header class="main-header">
-      <div class="container">
-        <div class="logo">
-          <img src="http://placehold.it/150x100" alt="логотип">
-        </div>
-        <nav class="nav">
-          <ul>
-            <li>
-              <a href="#">Студия</a>
-            </li>
-            <li>
-              <a href="#">Клиенты</a>
-            </li>
-            <li>
-              <a href="#">Магазин</a>
-            </li>
-            <li>
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-		  <div class="user-block">
-			<a class="purchase" href="#">Корзина</a>
-		  </div>
-		</nav>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Нёрдс</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+</head>
+
+<body>
+  <header class="main-header">
+    <div class="container">
+      <div class="logo">
+        <img src="img/nerds-logo.png" alt="логотип" width="160" height="65">
       </div>
+      <nav class="nav">
+        <ul>
+          <li>
+            <a href="#">Студия</a>
+          </li>
+          <li>
+            <a href="#">Клиенты</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        <div class="user-block">
+          <a class="purchase" href="#">Корзина</a>
+        </div>
+      </nav>
+    </div>
 
 
-	<div class="container">
+    <div class="container">
       <div class="slider">
         <div class="slider-item slider-item-design">
           <h2 class="slider-item-title">Долго, дорого, скрупулезно.</h2>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
+          <img src="img/nerds-index-slide1.png" alt="Долго, дорого, скрупулезно." width="760" height="431">
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
 
         <div class="slider-item slider-item-math">
           <h2 class="slider-item-title">Любим математику как никто другой</h2>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-          <img src="http://placehold.it/150x100" alt="Любим математику как никто другой">
+          <img src="img/nerds-index-slide2.png" alt="Любим математику как никто другой" width="760" height="431">
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
 
         <div class="slider-item slider-item-worktime">
           <h2 class="slider-item-title">Только ночь,только хардкор</h2>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-          <img src="http://placehold.it/150x100" alt="Долго, дорого, скрупулезно.">
+          <img src="img/nerds-index-slide3.png" alt="Долго, дорого, скрупулезно." width="760" height="431">
           <a class="btn" title="Узнать больше" href="#">Узнать больше</a>
         </div>
+
 
       </div>
     </div>
@@ -64,144 +67,144 @@
   <div class="container">
 
     <section class="features">
-		<div class="features-item">
-          <div class="features-item-red">
-            <img src="http://placehold.it/150x100" alt="Веб-сайты">
-          </div>
-          <b class="features-name">Веб-сайты</b>
-          <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-          <a class="btn btn-red" title="Заказать" href="#">Заказать</a>
+      <div class="features-item">
+        <div class="features-item-red">
+          <img src="img/features-red.png" alt="Веб-сайты" width="300" height="146">
         </div>
-        <div class="features-item">
-          <div class="features-item-green">
-            <img src="http://placehold.it/150x100" alt="Приложения">
-          </div>
-          <b class="features-name">Приложения</b>
-          <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-          <a class="btn btn-green" title="Заказать" href="#">Заказать</a>
+        <b class="features-name">Веб-сайты</b>
+        <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+        <a class="btn btn-red" title="Заказать" href="#">Заказать</a>
+      </div>
+      <div class="features-item">
+        <div class="features-item-green">
+          <img src="img/features-green.png" alt="Приложения" width="300" height="146">
         </div>
-        <div class="features-item">
-          <div class="features-item-yellow">
-            <img src="http://placehold.it/150x100" alt="Презентации">
-          </div>
-          <b class="features-name">Презентации</b>
-          <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-          <a class="btn btn-yellow" title="Заказать" href="#">Заказать</a>
+        <b class="features-name">Приложения</b>
+        <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+        <a class="btn btn-green" title="Заказать" href="#">Заказать</a>
+      </div>
+      <div class="features-item">
+        <div class="features-item-yellow">
+          <img src="img/features-yellow.png" alt="Презентации" width="300" height="146">
         </div>
-      </section>
+        <b class="features-name">Презентации</b>
+        <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+        <a class="btn btn-yellow" title="Заказать" href="#">Заказать</a>
+      </div>
+    </section>
 
 
-      <div class="index-content">
-        <div class="index-content-left">
-          <h3 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3>
-          <p>
-            Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-            превыше креатива. Работаем не покладая рук, как роботы.
-          </p>
-          <b class="index-list-name">Выполняем заказы на разработку:</b>
-          <ul>
-            <li>Веб-сайтов любой сложности</li>
-            <li>Мобильных приложений для iOS и Android</li>
-            <li>Слайдшоу и видео для корпоративных презентаций</li>
-          </ul>
-        </div>
-
-        <div class="index-content-right">
-          <img src="http://placehold.it/150x100" alt="логотип">
-          <p class="index-content-data">с 2004 года любим точность во всем:</p>
-          <ul>
-            <li>
-              <p class="index-content-data-show">146<sup>%</sup></p>
-              <p class="index-content-data-description">Уровень самоотдачи</p>
-            </li>
-            <li>
-              <p class="index-content-data-show">100<sup>%</sup></p>
-              <p class="index-content-data-description">Соблюдение сроков</p>
-            </li>
-            <li>
-              <p class="index-content-data-show">50<sup>%</sup></p>
-              <p class="index-content-data-description">Минимальная предоплата</p>
-            </li>
-          </ul>
-        </div>
+    <div class="index-content">
+      <div class="index-content-left">
+        <h3 class="index-content-title">Мы — маленькая, но гордая дизайн-студия из Краснодара. </h3>
+        <p>
+          Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.
+        </p>
+        <b class="index-list-name">Выполняем заказы на разработку:</b>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
       </div>
 
-      <div class="clients-logo">
+      <div class="index-content-right">
+        <img src="img/nerds-illustration.png" alt="логотип" width="360" height="208">
+        <p class="index-content-data">с 2004 года любим точность во всем:</p>
         <ul>
           <li>
-            <a title="html-academy" href="#">
-              <img src="http://placehold.it/150x100" alt="html-academy" width="150" height="100">
-            </a>
+            <p class="index-content-data-show">146<sup>%</sup></p>
+            <p class="index-content-data-description">Уровень самоотдачи</p>
           </li>
           <li>
-            <a title="borodinski" href="#">
-              <img src="http://placehold.it/150x100" alt="borodinski" width="150" height="100">
-            </a>
+            <p class="index-content-data-show">100<sup>%</sup></p>
+            <p class="index-content-data-description">Соблюдение сроков</p>
           </li>
           <li>
-            <a title="pink" href="#">
-              <img src="http://placehold.it/150x100" alt="pink" width="150" height="100">
-            </a>
-          </li>
-          <li>
-            <a title="mishka" href="#">
-              <img src="http://placehold.it/150x100" alt="mishka" width="150" height="100">
-            </a>
+            <p class="index-content-data-show">50<sup>%</sup></p>
+            <p class="index-content-data-description">Минимальная предоплата</p>
           </li>
         </ul>
       </div>
     </div>
 
-    <div class="map">
-      <div class="map-wrapper"></div>
-      <div class="container">
-        <section class="map-contacts">
-          <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
-          <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. +7 (812) 275-75-75</p>
-          <a class="btn" href="#">Напишите нам</a>
-        </section>
-      </div>
-    </div>
-
-    <footer>
-      <div class="container">
-        <div class="footer-map">
-          <a title="карта проезда" href="#">
-            <img src="http://placehold.it/150x100" alt="карта проезда" width="150" height="100">
+    <div class="clients-logo">
+      <ul>
+        <li>
+          <a title="html-academy" href="#">
+            <img src="img/html-logo.png" alt="html-academy" width="199" height="68">
           </a>
-        </div>
-        <section class="footer-social">
-         <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-         <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-         <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-       </section>
-        <section class="footer-info">
-          <p class="footer-info-title">Давайте дружить, это выгодно!</p>
-          <p>Скидка 10% для друзей из социальных сетей.</p>
-        </section>
-      </div>
-    </footer>
+        </li>
+        <li>
+          <a title="borodinski" href="#">
+            <img src="img/borodinsky-logo-.png" alt="borodinski" width="209" height="90">
+          </a>
+        </li>
+        <li>
+          <a title="pink" href="#">
+            <img src="img/pink-logo.png" alt="pink" width="185" height="52">
+          </a>
+        </li>
+        <li>
+          <a title="mishka" href="#">
+            <img src="img/mishka-logo.png" alt="mishka" width="173" height="84">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
-    <div class="popup-write-us">
-        <h2 class="popup-write-us-title">Напишите нам</h2>
-        <a href="#" class="popup-close"></a>
-        <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
-          <label for="write-name">
+  <div class="map">
+    <div class="map-wrapper"></div>
+    <div class="container">
+      <section class="map-contacts">
+        <p class="map-conacts-title">NЁRDS DESIGN STUDIO</p>
+        <p>191186, Санкт-Петербург, <br>ул. Б. Конюшенная, д. 19/8</p>
+        <p>тел. +7 (812) 275-75-75</p>
+        <a class="btn" href="#">Напишите нам</a>
+      </section>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container">
+      <div class="footer-map">
+        <a title="карта проезда" href="#">
+          <img src="img/map.png" alt="карта проезда" width="1440" height="416">
+        </a>
+      </div>
+      <section class="footer-social">
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+      </section>
+      <section class="footer-info">
+        <p class="footer-info-title">Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </div>
+  </footer>
+
+  <div class="popup-write-us">
+    <h2 class="popup-write-us-title">Напишите нам</h2>
+    <a href="#" class="popup-close"></a>
+    <form class="write-us-form" action="https://echo.htmlacademy.ru" method="post">
+      <label for="write-name">
             <span>Ваше имя</span>
             <input type="text" name="name" value="" placeholder="Представьтесь, пожалуйста" id="write-name">
           </label>
-          <label for="write-mail">
+      <label for="write-mail">
             <span>Ваш e-mail</span>
             <input type="text" name="text" value="" placeholder="Для отправки ответа" id="write-mail">
           </label>
-          <label for="write-post">
+      <label for="write-post">
             <span>Текст письма</span>
             <textarea name="post" id="write-post" rows="5" placeholder="Для отправки ответа"></textarea>
           </label>
-            <button class="btn" type="submit">Отправить</button>
-         </form>
-    </div>
+      <button class="btn" type="submit">Отправить</button>
+    </form>
+  </div>
 
-  </body>
+</body>
+
 </html>
