сетка не поддается
Проблемы
Не могу поставить фоном картинку ни у слайдера, ни в каком-то еще блоке.
Наверху у блока слйдера тоже какой-то отступ. Небольшая катастрофа.

--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
           </div>
           <img src="img/img-sedona.jpg" alt="макет Sedona" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">Sedona</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Sedona</а>
             <p class="catalog-info-description">Информационный сайт для туристов</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
@@ -133,7 +133,7 @@
           </div>
           <img src="img/img-pink.jpg" alt="макет Pink app" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">Pink app</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Pink app</a>
             <p class="catalog-info-description">Продуктовый лендинг приложения для iOS и Android</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
@@ -144,7 +144,7 @@
           </div>
           <img src="img/img-barbershop.jpg" alt="макет Barbershop" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">Barbershop</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Barbershop</a>
             <p class="catalog-info-description">Сайт салоны красоты. Для мужчин, да.</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
@@ -155,7 +155,7 @@
           </div>
           <img src="img/img-mishka.jpg" alt="макет Mishka" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">Mishka</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Mishka</a>
             <p class="catalog-info-description">Интернет-магазин вязаных игрушек</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
@@ -166,7 +166,7 @@
           </div>
           <img src="img/img-aplus.jpg" alt="макет A Plus" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">A Plus</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">A Plus</a>
             <p class="catalog-info-description">Лендинг курсов повышения квалификации</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
@@ -177,7 +177,7 @@
           </div>
           <img src="img/img-kvast.jpg" alt="макет Кваст" width="360" height="576">
           <div class="catalog-info">
-            <p class="catalog-info-title">Кваст</p>
+            <a class="catalog-info-title" title="рассмотреть подробнее" href="#">Кваст</a>
             <p class="catalog-info-description">Промо-сайт производителя крафтового кваса</p>
             <a class="btn" href="#">9900 руб</a>
           </div>
