--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="main-header">
-    <div class="container clearfix">
+    <div class="container">
       <div class="logo">
         <img src="img/nerds-logo.png" alt="логотип" width="160" height="65">
       </div>
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="container clearfix">
+    <div class="container">
       <div class="slider">
         <div class="slider-item slider-item-design">
           <h2 class="slider-item-title">Долго, дорого, скрупулезно.</h2>
@@ -122,7 +122,7 @@
       </div>
     </div>
 
-    <div class="clients-logo clearfix">
+    <div class="clients-logo ">
       <ul>
         <li>
           <a title="html-academy" href="#">
