--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>HTML Academy: Нёрдс каталог</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 
 <body>
@@ -39,9 +39,9 @@
     <h2 class="catalog-title">Магазин готовых шаблонов</h2>
   </header>
 
-  <main class="container">
+  <main class="container clearfix">
 
-    <div class="filters">
+    <div class="filters ">
       <form class="filter-grid-form" action="https://echo.htmlacademy.ru" method="post">
         <div class="filter-price">
           <b class="filter-title">СТОИМОСТЬ:</b>
